--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abanoub Talaat Profile</title>
+    <title>EraaSoft</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -104,10 +104,39 @@
             font-size: 15px;
             line-height: 1.5;
         }
+        .tabs {
+            display: flex;
+            gap: 8px;
+            background: #ffffff;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 10px;
+        }
+        .tab-link {
+            display: inline-block;
+            padding: 10px 14px;
+            text-decoration: none;
+            color: #0056b3;
+            background: #e8f1ff;
+            border-radius: 6px;
+            font-weight: bold;
+        }
+        .tab-link:hover {
+            background: #d7e9ff;
+        }
+        .tab-link.active {
+            background: #0056b3;
+            color: #ffffff;
+        }
     </style>
 </head>
 <body>
     <div>
+        <nav class="tabs" aria-label="Team tabs">
+            <a class="tab-link active" href="./index.html">Team will discuss</a>
+            <a class="tab-link" href="./index2.html">Team will not discuss</a>
+        </nav>
         <h3 style="text-align: center;background:#0056b3;padding: 20px;color:white">التيم الل هيناقش </h3>
         <div class="profile-container">
             <div class="section">
