--- a/index2.html
+++ b/index2.html
@@ -228,6 +228,24 @@
                 </div>
             </div>
         </div>
+
+        <!-- Content for the team that will NOT discuss -->
+        <div class="profile-container">
+            <div class="section">
+                <div class="name">Toka Nader </div>
+                <div class="title">Public Relations</div>
+            </div>
+
+            <div class="section">
+                <div class="image-row">
+                    
+                    <div class="image-wrapper">
+                        <img src="./assets/toka.jpeg" alt="ID Front">
+                        <a href="./assets/toka.jpeg" download="toka.jpeg" class="download-button">Download</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     
 </body>
