--- a/index.html
+++ b/index.html
@@ -129,6 +129,25 @@
             background: #0056b3;
             color: #ffffff;
         }
+        .wa-link {
+            display: inline-flex;
+            align-items: center;
+            margin-left: 8px;
+            vertical-align: middle;
+        }
+        .wa-link svg {
+            width: 24px;
+            height: 24px;
+            fill: #25D366;
+        }
+        .wa-link:hover svg {
+            fill: #1ebe5d;
+        }
+        .wa-number {
+            margin-left: 6px;
+            font-size: 14px;
+            color: #333;
+        }
     </style>
 </head>
 <body>
@@ -140,7 +159,10 @@
         <h3 style="text-align: center;background:#0056b3;padding: 20px;color:white">التيم الل هيناقش </h3>
         <div class="profile-container">
             <div class="section">
-                <div class="name">Ramy Atef</div>
+                <div class="name">Ramy Atef <a class="wa-link" href="https://wa.me/201124582520" target="_blank" aria-label="WhatsApp Ramy">
+                    <svg viewBox="0 0 32 32" aria-hidden="true"><path d="M19.11 17.55c-.3-.15-1.77-.87-2.04-.97-.27-.1-.47-.15-.67.15-.2.3-.77.97-.94 1.17-.17.2-.35.22-.65.07-.3-.15-1.26-.46-2.4-1.47-.89-.79-1.49-1.77-1.66-2.07-.17-.3-.02-.46.13-.61.14-.14.3-.35.45-.52.15-.17.2-.3.3-.5.1-.2.05-.37-.02-.52-.07-.15-.67-1.62-.92-2.22-.24-.58-.49-.5-.67-.51-.17-.01-.37-.01-.57-.01s-.52.07-.79.37c-.27.3-1.04 1.02-1.04 2.49 0 1.47 1.07 2.89 1.22 3.09.15.2 2.11 3.22 5.11 4.51.71.31 1.27.49 1.7.62.71.22 1.36.19 1.87.11.57-.08 1.77-.72 2.02-1.42.25-.7.25-1.29.17-1.42-.07-.13-.27-.2-.57-.35zM16.01 2.67c-7.34 0-13.3 5.96-13.3 13.3 0 2.34.61 4.55 1.68 6.46L2 30l7.75-2.03c1.84 1 3.95 1.57 6.18 1.57 7.34 0 13.3-5.96 13.3-13.3s-5.96-13.3-13.3-13.3zm0 24.06c-2.17 0-4.19-.63-5.88-1.71l-.42-.26-4.6 1.2 1.23-4.48-.28-.46c-1.03-1.7-1.62-3.69-1.62-5.85 0-6.18 5.02-11.2 11.2-11.2s11.2 5.02 11.2 11.2-5.02 11.2-11.2 11.2z"></path></svg>
+                    <span class="wa-number">201124582520</span>
+                </a></div>
                 <div class="title">Senior Backend (.Net)</div>
             </div>
             <div class="section">
@@ -180,7 +202,10 @@
          <!-- start the section -->
         <div class="profile-container">
             <div class="section">
-                <div class="name">Bahy Talaat</div>
+                <div class="name">Bahy Talaat <a class="wa-link" href="https://wa.me/201282607728" target="_blank" aria-label="WhatsApp Bahy">
+                    <svg viewBox="0 0 32 32" aria-hidden="true"><path d="M19.11 17.55c-.3-.15-1.77-.87-2.04-.97-.27-.1-.47-.15-.67.15-.2.3-.77.97-.94 1.17-.17.2-.35.22-.65.07-.3-.15-1.26-.46-2.4-1.47-.89-.79-1.49-1.77-1.66-2.07-.17-.3-.02-.46.13-.61.14-.14.3-.35.45-.52.15-.17.2-.3.3-.5.1-.2.05-.37-.02-.52-.07-.15-.67-1.62-.92-2.22-.24-.58-.49-.5-.67-.51-.17-.01-.37-.01-.57-.01s-.52.07-.79.37c-.27.3-1.04 1.02-1.04 2.49 0 1.47 1.07 2.89 1.22 3.09.15.2 2.11 3.22 5.11 4.51.71.31 1.27.49 1.7.62.71.22 1.36.19 1.87.11.57-.08 1.77-.72 2.02-1.42.25-.7.25-1.29.17-1.42-.07-.13-.27-.2-.57-.35zM16.01 2.67c-7.34 0-13.3 5.96-13.3 13.3 0 2.34.61 4.55 1.68 6.46L2 30l7.75-2.03c1.84 1 3.95 1.57 6.18 1.57 7.34 0 13.3-5.96 13.3-13.3s-5.96-13.3-13.3-13.3zm0 24.06c-2.17 0-4.19-.63-5.88-1.71l-.42-.26-4.6 1.2 1.23-4.48-.28-.46c-1.03-1.7-1.62-3.69-1.62-5.85 0-6.18 5.02-11.2 11.2-11.2s11.2 5.02 11.2 11.2-5.02 11.2-11.2 11.2z"></path></svg>
+                    <span class="wa-number">201282607728</span>
+                </a></div>
                 <div class="title">Senior Backend (.Net)</div>
             </div>
             <div class="section">
@@ -221,7 +246,10 @@
         <!-- start the section -->
         <div class="profile-container">
             <div class="section">
-                <div class="name">Gerges Nady</div>
+                <div class="name">Gerges Nady <a class="wa-link" href="https://wa.me/201070037093" target="_blank" aria-label="WhatsApp Gerges">
+                    <svg viewBox="0 0 32 32" aria-hidden="true"><path d="M19.11 17.55c-.3-.15-1.77-.87-2.04-.97-.27-.1-.47-.15-.67.15-.2.3-.77.97-.94 1.17-.17.2-.35.22-.65.07-.3-.15-1.26-.46-2.4-1.47-.89-.79-1.49-1.77-1.66-2.07-.17-.3-.02-.46.13-.61.14-.14.3-.35.45-.52.15-.17.2-.3.3-.5.1-.2.05-.37-.02-.52-.07-.15-.67-1.62-.92-2.22-.24-.58-.49-.5-.67-.51-.17-.01-.37-.01-.57-.01s-.52.07-.79.37c-.27.3-1.04 1.02-1.04 2.49 0 1.47 1.07 2.89 1.22 3.09.15.2 2.11 3.22 5.11 4.51.71.31 1.27.49 1.7.62.71.22 1.36.19 1.87.11.57-.08 1.77-.72 2.02-1.42.25-.7.25-1.29.17-1.42-.07-.13-.27-.2-.57-.35zM16.01 2.67c-7.34 0-13.3 5.96-13.3 13.3 0 2.34.61 4.55 1.68 6.46L2 30l7.75-2.03c1.84 1 3.95 1.57 6.18 1.57 7.34 0 13.3-5.96 13.3-13.3s-5.96-13.3-13.3-13.3zm0 24.06c-2.17 0-4.19-.63-5.88-1.71l-.42-.26-4.6 1.2 1.23-4.48-.28-.46c-1.03-1.7-1.62-3.69-1.62-5.85 0-6.18 5.02-11.2 11.2-11.2s11.2 5.02 11.2 11.2-5.02 11.2-11.2 11.2z"></path></svg>
+                    <span class="wa-number">201070037093</span>
+                </a></div>
                 <div class="title">Senior Flutter</div>
             </div>
             <div class="section">
@@ -260,7 +288,10 @@
         <!-- start the section -->
         <div class="profile-container">
             <div class="section">
-                <div class="name">Shahenda Hemdan</div>
+                <div class="name">Shahenda Hemdan <a class="wa-link" href="https://wa.me/201014803845" target="_blank" aria-label="WhatsApp Shahenda">
+                    <svg viewBox="0 0 32 32" aria-hidden="true"><path d="M19.11 17.55c-.3-.15-1.77-.87-2.04-.97-.27-.1-.47-.15-.67.15-.2.3-.77.97-.94 1.17-.17.2-.35.22-.65.07-.3-.15-1.26-.46-2.4-1.47-.89-.79-1.49-1.77-1.66-2.07-.17-.3-.02-.46.13-.61.14-.14.3-.35.45-.52.15-.17.2-.3.3-.5.1-.2.05-.37-.02-.52-.07-.15-.67-1.62-.92-2.22-.24-.58-.49-.5-.67-.51-.17-.01-.37-.01-.57-.01s-.52.07-.79.37c-.27.3-1.04 1.02-1.04 2.49 0 1.47 1.07 2.89 1.22 3.09.15.2 2.11 3.22 5.11 4.51.71.31 1.27.49 1.7.62.71.22 1.36.19 1.87.11.57-.08 1.77-.72 2.02-1.42.25-.7.25-1.29.17-1.42-.07-.13-.27-.2-.57-.35zM16.01 2.67c-7.34 0-13.3 5.96-13.3 13.3 0 2.34.61 4.55 1.68 6.46L2 30l7.75-2.03c1.84 1 3.95 1.57 6.18 1.57 7.34 0 13.3-5.96 13.3-13.3s-5.96-13.3-13.3-13.3zm0 24.06c-2.17 0-4.19-.63-5.88-1.71l-.42-.26-4.6 1.2 1.23-4.48-.28-.46c-1.03-1.7-1.62-3.69-1.62-5.85 0-6.18 5.02-11.2 11.2-11.2s11.2 5.02 11.2 11.2-5.02 11.2-11.2 11.2z"></path></svg>
+                    <span class="wa-number">201014803845</span>
+                </a></div>
                 <div class="title">PHP & Laravel Developer</div>
             </div>
             <div class="section">
@@ -299,7 +330,10 @@
         <!-- start the section -->
         <div class="profile-container">
             <div class="section">
-                <div class="name">Kerols Magdy</div>
+                <div class="name">Kerols Magdy <a class="wa-link" href="https://wa.me/+201110759890" target="_blank" aria-label="WhatsApp Kerols">
+                    <svg viewBox="0 0 32 32" aria-hidden="true"><path d="M19.11 17.55c-.3-.15-1.77-.87-2.04-.97-.27-.1-.47-.15-.67.15-.2.3-.77.97-.94 1.17-.17.2-.35.22-.65.07-.3-.15-1.26-.46-2.4-1.47-.89-.79-1.49-1.77-1.66-2.07-.17-.3-.02-.46.13-.61.14-.14.3-.35.45-.52.15-.17.2-.3.3-.5.1-.2.05-.37-.02-.52-.07-.15-.67-1.62-.92-2.22-.24-.58-.49-.5-.67-.51-.17-.01-.37-.01-.57-.01s-.52.07-.79.37c-.27.3-1.04 1.02-1.04 2.49 0 1.47 1.07 2.89 1.22 3.09.15.2 2.11 3.22 5.11 4.51.71.31 1.27.49 1.7.62.71.22 1.36.19 1.87.11.57-.08 1.77-.72 2.02-1.42.25-.7.25-1.29.17-1.42-.07-.13-.27-.2-.57-.35zM16.01 2.67c-7.34 0-13.3 5.96-13.3 13.3 0 2.34.61 4.55 1.68 6.46L2 30l7.75-2.03c1.84 1 3.95 1.57 6.18 1.57 7.34 0 13.3-5.96 13.3-13.3s-5.96-13.3-13.3-13.3zm0 24.06c-2.17 0-4.19-.63-5.88-1.71l-.42-.26-4.6 1.2 1.23-4.48-.28-.46c-1.03-1.7-1.62-3.69-1.62-5.85 0-6.18 5.02-11.2 11.2-11.2s11.2 5.02 11.2 11.2-5.02 11.2-11.2 11.2z"></path></svg>
+                    <span class="wa-number">+201110759890</span>
+                </a></div>
                 <div class="title">Front-end Developer</div>
             </div>
             <div class="section">
@@ -334,6 +368,7 @@
             </div>
         </div>
     </div>
+    
     
 </body>
 </html>
